added presentation pdf

--- a/aviation.ipynb
+++ b/aviation.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "# DATA UNDERSTANDING \n",
     "In the data folder is a dataset from the National Transportation Safety Board that includes aviation accident data from 1962 to 2023 about civil aviation accidents and selected incidents in the United States and international waters.\n",
-    "The data we're going to use is contained in the AviationData.csv file; WHICH has records about the aircraft makes, the accidents' data, injury severity and outcomes etc. that will be used to answer our business questions."
+    "The data we're going to use is contained in the AviationData.csv file; Which has records about the aircraft makes, the accidents' data, injury severity and outcomes etc. that will be used to answer our business questions."
    ]
   },
   {
@@ -2311,16 +2311,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#flight_purpose_df= flight_purpose_df[flight_purpose_df['Weather.Condition']!= 'UNK']\n",
-    "#flight_purpose_df= flight_purpose_df[flight_purpose_df['Weather.Condition']!= 'unk']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 133,
    "metadata": {},
    "outputs": [],
@@ -2504,12 +2494,12 @@
     "Further analyses could yield better insights to better influence company's decision for purchase of aircraft.\n",
     "\n",
     "#### Better prediction for survivability data based on  aircraft operating under Code of Federal Regulations (CFR) \n",
-    "The data on F.A.R Description compared to accidents data such injury severity could be a good use for the model\n",
+    "The data on F.A.R Description compared to accidents data such as injury severity. \n",
     "\n",
     "#### Show accidents occurence based on broad phase of flight\n",
     "The model could analyze when accidents most commonly occur; at takeoff, landing or approach.\n",
     "\n",
-    "#### Use model of aircrafts to determine common aircraft used for each category\n",
+    "#### Use data on model of  aircrafts to determine common aircraft used for each category\n",
     "The data on model of aircraft, can be analyzed based on accidents frequency to determine which is the cost-beneficial to use "
    ]
   },
