added images folder

--- a/aviation.ipynb
+++ b/aviation.ipynb
@@ -9,7 +9,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AVIATION BUSINESS TRENDS\n",
+    "# AVIATION ACCIDENTS TRENDS\n",
     "![aviation.png](attachment:aviation.png)"
    ]
   },
